# Multifolio

./: .gitignore  ARCHITECTURE_DECISIONS.md  PROJECT_GOALS.md  README.md  STRUCTURE.md  STYLE_GUIDE.md
backend/: pyproject.toml  requirements.txt
backend/multifolio/: __init__.py
backend/multifolio/core/sampling/: __init__.py  correlation.py  sampler.py
backend/multifolio/core/sampling/distributions/: __init__.py  base.py  continuous.py  discrete.py
backend/tests/unit/sampling/: __init__.py  test_advanced_features.py  test_correlation.py  test_derived_parameters.py  test_distributions.py  test_quality_and_viz.py  test_sampler.py
docs/: ADVANCED_FEATURES.md  CORRELATION_DOCUMENTATION.md  CORRELATION_IMPLEMENTATION_SUMMARY.md  CORRELATION_QUICKSTART.md  CORRELATION_README.md  QUALITY_AND_VISUALIZATION.md  README.md  SAMPLING_GUIDE.md  SAMPLING_REFERENCE.md
docs/summaries/: QMC_SAMPLING_COMPLETE.md  SAMPLING_COMPLETE.md  custom_distribution_methods.md
examples/: advanced_derived_parameters.py  advanced_features_example.py  correlated_sampling_examples.py  custom_distributions_example.py  custom_methods_comparison.py  derived_parameters_example.py  qmc_sampling_example.py  quality_and_visualization_example.py  sampling_example.py
